Added a js interactive animation to the hero title section

--- a/Desktop/mini-porfolio/Index.html
+++ b/Desktop/mini-porfolio/Index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Fonts -->
+     <link rel="icon" href="./Assets/ChatGPT Image Feb 10, 2026, 11_46_28 PM.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +24,7 @@
       <nav class="navbar">
         <!-- Logo -->
         <div class="logo">
-          ORACL<span class="logo-accent">3</span>
+          <img src="./Assets/ChatGPT Image Feb 10, 2026, 11_46_28 PM.png" alt="">
         </div>
 
         <!-- Navigation links -->
@@ -51,8 +53,9 @@
             <span class="hero-greeting">Hello,</span>
 
             <h1 class="hero-title">
-              I’m Oracl3, a Full-Stack <br />
-              Web Developer based in Nigeria
+
+                <span id="typing-text">
+                </span>
             </h1>
 
             <p class="hero-description">
@@ -68,7 +71,7 @@
           </div>
 
           <div class="hero-image">
-            <img src="./Assets/image..jpeg" alt="Portrait of Oracl3" />
+            <img src="./Assets/WhatsApp Image 2026-02-11 at 5.48.26 PM.jpeg" alt="Portrait of Oracl3" />
           </div>
         </div>
       </section>
@@ -85,4 +88,5 @@
       <p>&copy; 2026 ORACL3. All rights reserved.</p>
     </footer>
   </body>
+  <script src="./Javascript/script.js"></script>
 </html>
